deleted unused files, completed additional function exercises, completed additional import exercises, created profiles.json file.

--- a/import_exercises.ipynb
+++ b/import_exercises.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b52cd51e",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<itertools.permutations object at 0x7f96412a9040>\n"
+      "9\n"
      ]
     }
    ],
@@ -78,31 +78,64 @@
     "## problems:\n",
     "\n",
     "## a. How many different ways can you combine the letters from \"abc\" with the numbers 1, 2, and 3?\n",
+    "# import itertools to use the permutations function\n",
+    "# insert the exercise variables into the permutations function\n",
+    "import itertools\n",
+    "\n",
+    "my_list = list(itertools.product('abc', '123'))\n",
+    "len(my_list)\n",
+    "print(len(my_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9cceae33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "## b. How many different combinations are there of 2 letters from \"abcd\"?\n",
+    "\n",
+    "## import itertools to use combinations\n",
+    "\n",
+    "import itertools\n",
+    "my_combinations = list(itertools.combinations('abcd', 2))\n",
+    "len(my_combinations)\n",
+    "print(len(my_combinations))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "972317f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## c. How many different permutations are there of 2 letters from \"abcd\"?\n",
+    "\n",
+    "# import permutations and apply it\n",
     "\n",
     "import itertools\n",
     "\n",
-    "itertools.permutations('abc123', 2)\n",
-    "print(itertools.permutations('abc123', 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cceae33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## b. How many different combinations are there of 2 letters from \"abcd\"?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "972317f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## c. How many different permutations are there of 2 letters from \"abcd\"?\n"
+    "my_permutations = list(itertools.permutations('abcd', 2))\n",
+    "len(my_permutations)\n",
+    "print(len(my_permutations))"
    ]
   },
   {
